--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@ gltfアニメ再生用-->
 </head>
 
 <script>
+
+    AFRAME.registerComponent('tel-listener', {
+        init: function () {
+            this.el.addEventListener('click', function (evt) {
+              //↓超重要!
+                this.setAttribute('href', 'https://www.yahoo.co.jp');
+                //console.log('I was clicked at: ', evt.detail.intersection.point);
+            });
+        }
+    });
+  
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
             this.el.addEventListener('click', function (evt) {
@@ -43,15 +54,7 @@ gltfアニメ再生用-->
     });
 
 
-    AFRAME.registerComponent('tel-listener', {
-        init: function () {
-            this.el.addEventListener('click', function (evt) {
-              //↓超重要!
-                this.setAttribute('href', 'https://www.yahoo.co.jp');
-                //console.log('I was clicked at: ', evt.detail.intersection.point);
-            });
-        }
-    });
+
 
 
 
@@ -162,11 +165,12 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-face.patt" registerevents>
 <!--a-link href="tel:09084644360" title="My Homepage" image="#imga" position="-1 0 -1" scale="0.3 0.3 0.3" rotation="-90 0 0"></a-link-->
+<a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.03" link="href:tel:09084644360" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" tel-listener></a-entity>
 <a-entity id="cg" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text id="text" class="link-object" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0" tel-listener></a-text>
-<a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.03" link="href:tel:09084644360" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" tel-listener>
-</a-entity>
+
+
 <a-plane id="plane" material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
