--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('tel-listener', {
         init: function () {
-            this.el.addEventListener('mouseenter', function (evt) {
+            this.el.addEventListener('click', function (evt) {
               //↓超重要!
                 this.setAttribute('href', 'https://www.yahoo.co.jp');
+                window.location.href="https://www.yahoo.co.jp";
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             });
         }
