--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@ gltfアニメ再生用-->
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
                 this.setAttribute('href', 'https://www.yahoo.co.jp');
-                //console.log('I was clicked at: ', evt.detail.intersection.point);
+                console.log('I was clicked at: ', evt.detail.intersection.point);
             });
         }
     });
+
 
 
 
