--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@ https://opensource.org/licenses/mit-license.php
 <head>
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<link rel="stylesheet" href="style.css" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+　<style type="text/css">
+    body{
+      height: 100%;
+      margin: 0;
+      overflow: hidden;
+      padding: 0;
+      width: 100%;
+    }
+  </style>
 <title>VR site</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
@@ -86,7 +95,6 @@ gltfアニメ再生用-->
     });
 
 
-/*
         AFRAME.registerComponent('registerevents', {
         init: function () {
             var marker = this.el;
@@ -102,7 +110,7 @@ gltfアニメ再生用-->
                 document.querySelector("#plane").setAttribute('animation', 'property: scale; from:0 0 1 ;to: 1 1 1; loop: false; dur: 1000;easing: easeInOutSine');
                 document.querySelector("#cg").setAttribute('animation','property: scale; from:0 0 0 ;to: 0.03 0.03 0.03; loop: false; dur: 1000;easing: easeInOutSine');
             });}})
-*/
+
 
 </script>
 
@@ -117,9 +125,10 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera look-controls>
-  <a-entity cursor="rayOrigin: mouse;fuse: false"
-            position="0 0 -1"
+<a-entity camera>
+<!--a-entity camera look-controls-->
+  <a-entity cursor="rayOrigin: mouse;fuse: false;fuseTimeout:500"
+            position="0 0 0"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
             scale="0.2 0.2 0.2"
             material="color: white; shader: flat">
