--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera>
+<a-entity camera look-controls>
 <!--a-entity camera look-controls-->
-  <a-entity cursor="rayOrigin: mouse;fuse: false;fuseTimeout:500"
-            position="0 0 0"
+  <a-entity cursor="rayOrigin: mouse;fuse: false"
+            position="0.01 0.01 -2"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
         <!--a-animation 
@@ -184,7 +184,7 @@ gltfアニメ再生用-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
 <a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
-<a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.35" rotation="-90 0 0" mail-listener></a-image>
+<a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image>
 
 <a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
