--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ https://opensource.org/licenses/mit-license.php
 <head>
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<!--meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"-->
-　<!--style type="text/css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+　<style type="text/css">
     body{
       height: 100%;
       margin: 0;
@@ -24,7 +24,7 @@ https://opensource.org/licenses/mit-license.php
       padding: 0;
       width: 100%;
     }
-  </style-->
+  </style>
 <title>AR businessCard</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
@@ -133,8 +133,7 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera>
-<!--a-entity camera look-controls-->
+<a-entity camera look-controls>
   <a-entity cursor="rayOrigin: mouse;fuse: false"
             position="0 0 0"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
@@ -186,7 +185,7 @@ gltfアニメ再生用-->
 <a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image>
 
-<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="0 0 0" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
 <a-text id="text" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
