--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://opensource.org/licenses/mit-license.php
   </style>
 <title>AR businessCard</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
   <!--script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script-->
 
   <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
@@ -121,9 +121,10 @@ gltfアニメ再生用-->
 
 </script>
 
-<body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false" arjs="patternRatio=0.80">
+<body style='margin : 0px; overflow: hidden;'>
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" patternRatio=0.80 embedded arjs="debugUIEnabled:false;sourceType: webcam;trackingMethod:best;">
   <!--embedded arjs="sourceType: webcam;"-->
+  <!--embedded arjs="debugUIEnabled:false;trackingMethod:best;"-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
