--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ https://opensource.org/licenses/mit-license.php
   </style>
 <title>AR businessCard</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-  <!--script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script-->
+  <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
   <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
@@ -122,7 +122,7 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" patternRatio=0.80 embedded arjs="debugUIEnabled:false;sourceType: webcam;trackingMethod:best;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false"  embedded arjs="patternRatio:0.80; debugUIEnabled:false;sourceType: webcam;trackingMethod:best;">
   <!--embedded arjs="sourceType: webcam;"-->
   <!--embedded arjs="debugUIEnabled:false;trackingMethod:best;"-->
 
