--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ gltfアニメ再生用-->
 
 </script>
 
-<body style='margin : 0px; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false" arjs="patternRatio=0.80" >
+<body style='margin: 0; overflow: hidden;'>
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false" arjs="patternRatio=0.80">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
