--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ gltfアニメ再生用-->
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image>
 
 <!--a-gltf-model id="cg" src="#model"></a-gltf-model-->
-<a-entity id="cg" gltf-model="#model" position="-1 -0.1 0" rotation="90 90 -90" scale="0.04 0.04 0.04" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" gltf-model="#model" position="-1 -0.1 0" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
 <a-text id="text" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
