--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ https://opensource.org/licenses/mit-license.php
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-　<style type="text/css">
+　<!--style type="text/css">
     body{
       height: 100%;
       margin: 0;
@@ -24,7 +24,7 @@ https://opensource.org/licenses/mit-license.php
       padding: 0;
       width: 100%;
     }
-  </style>
+  </style-->
 <title>AR businessCard</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
@@ -122,7 +122,7 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false" arjs="patternRatio=0.80">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
@@ -133,7 +133,8 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera look-controls>
+<a-entity camera>
+<!--a-entity camera look-controls-->
   <a-entity cursor="rayOrigin: mouse;fuse: false"
             position="0 0 0"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
