--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<a-entity camera>
 <!--a-entity camera look-controls-->
-  <a-entity cursor="rayOrigin: mouse;fuse: false"
-            position="0 0 0"
-            geometry="primitive: ring;radiusInner: 0.2; radiusOuter: 0.3"
+<a-entity camera look-controls>
+  <a-entity cursor="fuse: false; fuseTimeout: 500"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
