--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ gltfアニメ再生用-->
 
 
 <!--a-entity camera look-controls-->
-<a-entity camera look-controls>
+<a-entity camera>
   <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
