--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ gltfアニメ再生用-->
 
 
 <!--a-entity camera look-controls-->
-<a-entity camera>
+<a-entity camera look-controls>
   <a-entity cursor="fuse: false; fuseTimeout: 500"
-            position="0 0 0"
+            position="0 0 -10"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
         <!--a-animation 
