--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ https://opensource.org/licenses/mit-license.php
 <head>
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<!--meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"-->
 　<!--style type="text/css">
     body{
       height: 100%;
@@ -29,11 +29,9 @@ https://opensource.org/licenses/mit-license.php
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
   <!--script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script-->
-
   <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
-<!--script src="./js/aframe-v0.8.2.min.js"></script-->
 <!-- script src="./js/animation-mixer.js"></script>
 gltfアニメ再生用-->
 <!--script src="./js/aframe-extras.loaders.min.js"></script-->
@@ -69,8 +67,6 @@ gltfアニメ再生用-->
             });
         }
     });
-
-
 
 
 /*
@@ -122,7 +118,7 @@ gltfアニメ再生用-->
 </script>
 
 <body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80;trackingMethod: best; sourceType: webcam;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;patternRatio:0.80;trackingMethod: best; sourceType: webcam;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
@@ -133,10 +129,9 @@ gltfアニメ再生用-->
 </a-assets>
 
 
-<!--a-entity camera look-controls-->
 <a-entity camera look-controls>
-  <a-cursor></a-cursor>
-  <!--a-entity cursor="fuse: false; fuseTimeout: 500"
+  <!--rayOrigin: mouse重要!-->
+  <a-entity cursor="fuse: false; fuseTimeout: 500;rayOrigin: mouse"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: white; shader: flat">
@@ -173,8 +168,8 @@ gltfアニメ再生用-->
              from="red" 
              to="black" 
              dur="0">
-      </a-animation>
-</a-entity-->
+      </a-animation-->
+</a-entity>
 </a-entity>
 <!--fuse="true" fuse-timeout="3000" -->
 
